fix: fixed mirror issues